Containerize Authentication API and SQL Server for Authentication microservice.

--- a/src/Services/Authentication/Authentication.API/Authentication.API.csproj
+++ b/src/Services/Authentication/Authentication.API/Authentication.API.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>af0a8dd8-9bc6-46fb-b082-43db665c8817</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
