--- a/src/Services/Authentication/Authentication.API/appsettings.json
+++ b/src/Services/Authentication/Authentication.API/appsettings.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "Database": "Server=localhost,1439;Database=AuthenticationDb;User Id=sa;Password=HardPassword12345678abc!;Encrypt=False;TrustServerCertificate=True"
   },
+  "Jwt": {
+    "Key": "YourSuperVeryVeryLongSecretKeyHere",
+    "Issuer": "AuthService",
+    "Audience": "Microservices"
+  },
   "AllowedHosts": "*"
 }
