--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -14,6 +14,9 @@ services:
       - ASPNETCORE_HTTP_PORTS=8080
       - ASPNETCORE_HTTPS_PORTS=8081
       - ConnectionStrings__Database=Server=authenticationdb;Database=AuthenticationDb;User Id=sa;Password=HardPassword12345678abc!;Encrypt=False;TrustServerCertificate=True
+      - Jwt__Issuer=AuthService
+      - Jwt__Audience=Microservices
+      - Jwt__Key=YourSuperVeryVeryLongSecretKeyHere
     depends_on:
       - authenticationdb
     ports:
