Implement routing for ApiGateway.

--- a/src/ApiGateways/YarpApiGateway/appsettings.json
+++ b/src/ApiGateways/YarpApiGateway/appsettings.json
@@ -5,5 +5,30 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "Jwt": {
+    "Authority": "http://localhost:6000",
+    "Audience": "Microservices",
+    "Key": "YourSuperVeryVeryLongSecretKeyHere"
+  },
+  "AllowedHosts": "*",
+  "ReverseProxy": {
+    "Routes": {
+      "auth-route": {
+        "ClusterId": "auth-cluster",
+        "Match": {
+          "Path": "/auth-service/{**catch-all}"
+        },
+        "Transforms": [ { "PathPattern": "{**catch-all}" } ]
+      }
+    },
+    "Clusters": {
+      "auth-cluster": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://localhost:6000"
+          }
+        }
+      }
+    }
+  }
 }
