--- a/src/Services/ConferenceManagement/ConferenceManagement.Infrastructure/ConferenceManagement.Infrastructure.csproj
+++ b/src/Services/ConferenceManagement/ConferenceManagement.Infrastructure/ConferenceManagement.Infrastructure.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\Shared\Shared.csproj" />
+    <ProjectReference Include="..\ConferenceManagement.Application\ConferenceManagement.Application.csproj" />
+    <ProjectReference Include="..\ConferenceManagement.Domain\ConferenceManagement.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
