--- a/src/Services/ConferenceManagement/ConferenceManagement.API/appsettings.json
+++ b/src/Services/ConferenceManagement/ConferenceManagement.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Database": "Server=localhost,1440;Database=ConferenceManagementDb;User Id=sa;Password=HardPassword12345678abc!;Encrypt=False;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
