--- a/src/Services/ConferenceManagement/ConferenceManagement.Infrastructure/ConferenceManagement.Infrastructure.csproj
+++ b/src/Services/ConferenceManagement/ConferenceManagement.Infrastructure/ConferenceManagement.Infrastructure.csproj
@@ -12,4 +12,17 @@
     <ProjectReference Include="..\ConferenceManagement.Domain\ConferenceManagement.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Migrations\" />
+    <Folder Include="Configurations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
