Register authentication and authorization in ConferenceManagement microservice.

--- a/src/ApiGateways/YarpApiGateway/appsettings.json
+++ b/src/ApiGateways/YarpApiGateway/appsettings.json
@@ -19,6 +19,14 @@
           "Path": "/auth-service/{**catch-all}"
         },
         "Transforms": [ { "PathPattern": "{**catch-all}" } ]
+      },
+      "conferencemanagement-route": {
+        "ClusterId": "conferencemanagement-cluster",
+        "Match": {
+          "Path": "/conferencemanagement-service/{**catch-all}"
+        },
+        "AuthorizationPolicy": "AuthenticatedUsers",
+        "Transforms": [ { "PathPattern": "{**catch-all}" } ]
       }
     },
     "Clusters": {
@@ -26,6 +34,12 @@
         "Destinations": {
           "destination1": {
             "Address": "http://localhost:6000"
+          }
+        }
+      },
+      "conferencemanagement-cluster": {
+        "Destinations": {
+          "destination1": {            "Address": "http://localhost:5001"
           }
         }
       }
