--- a/src/Services/ConferenceManagement/ConferenceManagement.API/appsettings.json
+++ b/src/Services/ConferenceManagement/ConferenceManagement.API/appsettings.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "Database": "Server=localhost,1440;Database=ConferenceManagementDb;User Id=sa;Password=HardPassword12345678abc!;Encrypt=False;TrustServerCertificate=True"
   },
+  "Jwt": {
+    "Authority": "http://localhost:5004",
+    "Audience": "Microservices",
+    "Key": "YourSuperVeryVeryLongSecretKeyHere"
+  },
   "AllowedHosts": "*"
 }
