Register message broker in Authentication and ConferenceManagement microservices.

--- a/src/Services/ConferenceManagement/ConferenceManagement.API/appsettings.json
+++ b/src/Services/ConferenceManagement/ConferenceManagement.API/appsettings.json
@@ -13,5 +13,10 @@
     "Audience": "Microservices",
     "Key": "YourSuperVeryVeryLongSecretKeyHere"
   },
+  "MessageBroker": {
+    "Host": "amqp://localhost:5672",
+    "UserName": "guest",
+    "Password": "guest"
+  },
   "AllowedHosts": "*"
 }
