--- a/src/Services/Authentication/Authentication.API/appsettings.json
+++ b/src/Services/Authentication/Authentication.API/appsettings.json
@@ -13,5 +13,10 @@
     "Issuer": "AuthService",
     "Audience": "Microservices"
   },
+  "MessageBroker": {
+    "Host": "amqp://localhost:5672",
+    "UserName": "guest",
+    "Password": "guest"
+  },
   "AllowedHosts": "*"
 }
