--- a/src/Shared/Shared.Messaging/Shared.Messaging.csproj
+++ b/src/Shared/Shared.Messaging/Shared.Messaging.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Shared\Shared.csproj" />
+  </ItemGroup>
+
 </Project>
