Update docker files. Containerize ConferenceManagement microservice.

--- a/src/Services/ConferenceManagement/ConferenceManagement.API/ConferenceManagement.API.csproj
+++ b/src/Services/ConferenceManagement/ConferenceManagement.API/ConferenceManagement.API.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>1744cbfb-f0a8-401a-b846-b60c8fa6c4a6</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
