--- a/src/Services/ConferenceManagement/ConferenceManagement.API/Dockerfile.original
+++ b/src/Services/ConferenceManagement/ConferenceManagement.API/Dockerfile.original
@@ -12,21 +12,19 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["Services/Authentication/Authentication.API/Authentication.API.csproj", "Services/Authentication/Authentication.API/"]
-COPY ["Shared/Shared.Messaging/Shared.Messaging.csproj", "Shared/Shared.Messaging/"]
-COPY ["Shared/Shared/Shared.csproj", "Shared/Shared/"]
-RUN dotnet restore "./Services/Authentication/Authentication.API/Authentication.API.csproj"
+COPY ["Services/ConferenceManagement/ConferenceManagement.API/ConferenceManagement.API.csproj", "Services/ConferenceManagement/ConferenceManagement.API/"]
+RUN dotnet restore "./Services/ConferenceManagement/ConferenceManagement.API/ConferenceManagement.API.csproj"
 COPY . .
-WORKDIR "/src/Services/Authentication/Authentication.API"
-RUN dotnet build "./Authentication.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/Services/ConferenceManagement/ConferenceManagement.API"
+RUN dotnet build "./ConferenceManagement.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./Authentication.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./ConferenceManagement.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Authentication.API.dll"]
+ENTRYPOINT ["dotnet", "ConferenceManagement.API.dll"]
