--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -49,3 +49,26 @@ services:
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
       - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
+
+  conferencemanagement.api:
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080
+      - ASPNETCORE_HTTPS_PORTS=8081
+      - ConnectionStrings__Database=Server=conferencemanagementdb;Database=ConferenceManagementDb;User Id=sa;Password=HardPassword12345678abc!;Encrypt=False;TrustServerCertificate=True
+      - Jwt__Authority=http://authentication.api:8080
+      - Jwt__Audience=Microservices
+      - Jwt__Key=YourSuperVeryVeryLongSecretKeyHere
+      - MessageBroker__Host=amqp://confy-mq:5672
+      - MessageBroker__UserName=guest
+      - MessageBroker__Password=guest
+    depends_on:
+      - conferencemanagementdb
+      - messagebroker
+      - authentication.api
+    ports:
+      - "6001:8080"
+      - "6061:8081"
+    volumes:
+      - ${APPDATA}/Microsoft/UserSecrets:/home/app/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/home/app/.aspnet/https:ro
