--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -13,3 +13,10 @@ services:
     build:
       context: .
       dockerfile: Services/Authentication/Authentication.API/Dockerfile
+
+  conferencemanagement.api:
+    image: ${DOCKER_REGISTRY-}conferencemanagementapi
+    build:
+      context: .
+      dockerfile: Services/ConferenceManagement/ConferenceManagement.API/Dockerfile
+
