--- a/src/Services/Notification/Notification.Infrastructure/Notification.Infrastructure.csproj
+++ b/src/Services/Notification/Notification.Infrastructure/Notification.Infrastructure.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\Shared\Shared.csproj" />
+    <ProjectReference Include="..\Notification.Application\Notification.Application.csproj" />
+    <ProjectReference Include="..\Notification.Domain\Notification.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
