--- a/src/Services/Notification/Notification.API/appsettings.json
+++ b/src/Services/Notification/Notification.API/appsettings.json
@@ -5,5 +5,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "Database": "Server=localhost,1442;Database=NotificationDb;User Id=sa;Password=HardPassword12345678abc!;Encrypt=False;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Authority": "http://localhost:5004",
+    "Audience": "Microservices",
+    "Key": "YourSuperVeryVeryLongSecretKeyHere"
+  },
+  "MessageBroker": {
+    "Host": "amqp://localhost:5672",
+    "UserName": "guest",
+    "Password": "guest"
+  },
   "AllowedHosts": "*"
 }
