--- a/src/Shared/Shared.Messaging/Shared.Messaging.csproj
+++ b/src/Shared/Shared.Messaging/Shared.Messaging.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MassTransit.EntityFrameworkCore" Version="8.4.0" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.7" />
   </ItemGroup>
 
