Initialize clean architecture and directory structure for Registration microservice.

--- a/src/Services/Registration/Registration.API/Registration.API.csproj
+++ b/src/Services/Registration/Registration.API/Registration.API.csproj
@@ -16,6 +16,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Shared\Shared\Shared.csproj" />
+    <ProjectReference Include="..\Registration.Application\Registration.Application.csproj" />
+    <ProjectReference Include="..\Registration.Infrastucture\Registration.Infrastucture.csproj" />
   </ItemGroup>
 
 </Project>
