--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -16,6 +16,15 @@ services:
     restart: always
     ports:
       - "1440:1433"
+ 
+  registrationdb:
+    container_name: registrationdb
+    environment:
+      - ACCEPT_EULA=Y
+      - SA_PASSWORD=HardPassword12345678abc!
+    restart: always
+    ports:
+      - "1441:1433"
 
   notificationdb:
     container_name: notificationdb
