Containerize Notification.API.

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -33,3 +33,10 @@ services:
       context: .
       dockerfile: Services/Registration/Registration.API/Dockerfile
 
+
+  notification.api:
+    image: ${DOCKER_REGISTRY-}notificationapi
+    build:
+      context: .
+      dockerfile: Services/Notification/Notification.API/Dockerfile
+
