--- a/src/launchSettings.json
+++ b/src/launchSettings.json
@@ -5,7 +5,8 @@
       "commandVersion": "1.0",
       "serviceActions": {
         "authentication.api": "StartDebugging",
-        "conferencemanagement.api": "StartDebugging"
+        "conferencemanagement.api": "StartDebugging",
+        "notification.api": "StartDebugging"
       }
     }
   }
