Add yarp api gateway routes.

--- a/src/ApiGateways/YarpApiGateway/appsettings.json
+++ b/src/ApiGateways/YarpApiGateway/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "Jwt": {
-    "Authority": "http://localhost:6000",
+    "Authority": "http://authentication.api:8080",
     "Audience": "Microservices",
     "Key": "YourSuperVeryVeryLongSecretKeyHere"
   },
@@ -27,19 +27,49 @@
         },
         "AuthorizationPolicy": "AuthenticatedUsers",
         "Transforms": [ { "PathPattern": "{**catch-all}" } ]
+      },
+      "notification-route": {
+        "ClusterId": "notification-cluser",
+        "Match": {
+          "Path": "/notification-service/{**catch-all}"
+        },
+        "AuthorizationPolicy": "AuthenticatedUsers",
+        "Transforms": [ { "PathPattern": "{**catch-all}" } ]
+      },
+      "registration-route": {
+        "ClusterId": "registration-cluster",
+        "Match": {
+          "Path": "/registration-service/{**catch-all}"
+        },
+        "AuthorizationPolicy": "AuthenticatedUsers",
+        "Transforms": [ { "PathPattern": "{**catch-all}" } ]
       }
     },
     "Clusters": {
       "auth-cluster": {
         "Destinations": {
           "destination1": {
-            "Address": "http://localhost:6000"
+            "Address": "http://authentication.api:8080"
           }
         }
       },
       "conferencemanagement-cluster": {
         "Destinations": {
-          "destination1": {            "Address": "http://localhost:6001"
+          "destination1": {
+            "Address": "http://conferencemanagement.api:8080"
+          }
+        }
+      },
+      "notification-cluser": {
+        "Destinations": {
+          "destination1": {
+            "Address": "http://notification.api:8080"
+          }
+        }
+      },
+      "registration-cluster": {
+        "Destinations": {
+          "destination1": {            "Address": "http://registration.api:8080"
           }
         }
       }
