--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -40,3 +40,10 @@ services:
       context: .
       dockerfile: Services/Notification/Notification.API/Dockerfile
 
+
+  yarpapigateway:
+    image: ${DOCKER_REGISTRY-}yarpapigateway
+    build:
+      context: .
+      dockerfile: ApiGateways/YarpApiGateway/Dockerfile
+
