--- a/src/launchSettings.json
+++ b/src/launchSettings.json
@@ -6,7 +6,8 @@
       "serviceActions": {
         "authentication.api": "StartDebugging",
         "conferencemanagement.api": "StartDebugging",
-        "notification.api": "StartDebugging"
+        "notification.api": "StartDebugging",
+        "yarpapigateway": "StartDebugging"
       }
     }
   }
