Fix conference id in Load Tests.

--- a/src/LoadTests/ConfyMicroservices.LoadTests/ConfyMicroservices.LoadTests.csproj
+++ b/src/LoadTests/ConfyMicroservices.LoadTests/ConfyMicroservices.LoadTests.csproj
@@ -21,6 +21,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\Services\ConferenceManagement\ConferenceManagement.Application\ConferenceManagement.Application.csproj" />
+	  <ProjectReference Include="..\..\Shared\Shared\Shared.csproj" />
 	</ItemGroup>
 
   <ItemGroup>
